close #132 fix buttons on mobile version

--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -20,14 +20,6 @@
             max-width: 100%;
         }
 
-        .btn {
-            background: $prolikeyellow;
-            color: $prolikeblue;
-            font-weight: 700;
-            border-radius: 0em;
-            padding: 20px 30px;
-            font-size: 18px;
-        }
     }
 
     /* Navigation bar */
@@ -79,6 +71,17 @@
             font-size: 15px;
         }
 
+    }
+
+    // CTA buttons
+
+    .btn {
+        font-size: 14px !important;
+        margin-top: 0;
+    }
+
+    .call {
+        margin-left: 0;
     }
 
 }
